[package]
name = "shards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.37"
env_logger = "0.11.3"
good_lp = { version = "1.8.1", default-features = false, features = ["lp-solvers", "lpsolve"] }
log = "0.4.21"
maplit = "1.0.2"
