[package]
name = "shards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.37"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
lp-modeler = { version = "0.5.0", features = ["minilp"] }
maplit = "1.0.2"
